<resources>
    <string name="app_name">MoviesFinder</string>
    <string name="text_API_KEY">KEY</string>
    <string name="text_ok">OK</string>
    <string name="internet_off">Please check internet connection.</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="transition_string">PosterImage</string>
    <string name="test_description">Under the direction of a ruthless instructor, a talented young drummer begins to pursue perfection at any cost, even his humanity.</string>
    <string name="test_movieName">Chappie</string>
    <string name="text_label_description">Description</string>
    <string name="text_label_rating">Rating</string>
    <string name="text_label_duration">Duration</string>
    <string name="text_label_year_of_release">Year Of Release</string>
    <string name="tag_selected">selected</string>
    <string name="tag_notselected">notselected</string>
    <string name="rating_outof10">/10</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="text_tryagain">Please Try Again !!</string>
    <string name="sort">Sort</string>
    <string name="text_select_category">Select the category</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="text_searching_popular">Searching Popular Movies !!</string>
    <string name="text_searching_toprated">Searching Top Rated Movies !!</string>
    <string name="favorite">Favorite</string>

</resources>
