<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:layout_below="@id/toolbarDetail">

        <LinearLayout
            android:id="@+id/layout_detailInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/toolbarDetail"
                android:background="@color/color_banner"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/imgPosterDetail"
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="@dimen/zero_dp"
                    android:src="@mipmap/ic_launcher"
                    android:transitionName="@string/transition_string" />
                <TextView
                    android:id="@+id/detail_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layout_poster"
                    android:background="@color/color_banner"
                    android:gravity="center"
                    android:text="@string/test_movieName"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_larger" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/bigger"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_label_year_of_release"
                        android:textColor="@color/color_textlabel"
                        android:textSize="@dimen/text_biggest"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detail_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/smallest"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_biggest" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_label_duration"
                        android:textColor="@color/color_textlabel"
                        android:textSize="@dimen/text_biggest"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detail_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/smallest"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_biggest" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_label_rating"
                        android:textColor="@color/color_textlabel"
                        android:textSize="@dimen/text_biggest"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detail_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/smallest"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_biggest" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/detail_descriptionLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_label_description"
                        android:textColor="@color/color_textlabel"
                        android:textSize="@dimen/text_biggest"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detail_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/small"
                        android:layout_marginRight="@dimen/bigger"
                        android:textColor="@android:color/black"
                        android:layout_marginTop="@dimen/small"
                        android:text="@string/test_description"
                        android:textSize="@dimen/text_biggest" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>